src/test/deca/context/valid/cast-withObject.deca
class A {
}

class B extends A {
}

class C extends B {
}

class D extends A {
}

class E {}

{
    Object o;
    D d;
    E e;
    C c;
    d = (D) (o);
    o = (Object) (c);
}