src/test/deca/context/invalid/assign-compatible.deca
class A{}

{
    A a = new Object();
}
